--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.0.2",
         "doctrine/dbal": "^3.3",
+        "goodby/csv": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "rap2hpoutre/fast-excel": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
